Adding Roles API to ref guide